Display failed on flow results charts, more translations

--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-03-15 20:39+0000\n"
+"POT-Creation-Date: 2021-03-18 13:41+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Nyaruka <info@textit.in>, 2021\n"
 "Language-Team: Spanish (https://www.transifex.com/rapidpro/teams/226/es/)\n"
@@ -2469,15 +2469,6 @@ msgstr "El idioma de autor, se pueden agregar idiomas adicionales más tarde"
 
 msgid "The flow version this definition is in"
 msgstr "La versión de flujo en la que se encuentra esta definición"
-
-msgid "Completed"
-msgstr "Terminado"
-
-msgid "Interrupted"
-msgstr "Interrumpido"
-
-msgid "Expired"
-msgstr "Caducado"
 
 msgid "Archive delete"
 msgstr "Eliminar archivo"
@@ -5394,6 +5385,15 @@ msgstr "Correo electrónico enviado a"
 msgid "with subject"
 msgstr "con tema"
 
+msgid "Interrupted"
+msgstr "Interrumpido"
+
+msgid "Expired"
+msgstr "Caducado"
+
+msgid "Completed"
+msgstr "Terminado"
+
 msgid "Started"
 msgstr "Empezado"
 
@@ -5762,6 +5762,9 @@ msgstr "Día de la semana"
 
 msgid "Time of Day"
 msgstr "Hora del día"
+
+msgid "Interrupted, Expired and Failed"
+msgstr ""
 
 #, python-format
 msgid ""
