--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-03-15 20:39+0000\n"
+"POT-Creation-Date: 2021-03-18 13:41+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Hudson Brendon <hudson.brendon@ilhasoft.com.br>, 2020\n"
 "Language-Team: Russian (https://www.transifex.com/rapidpro/teams/226/ru/)\n"
@@ -3236,15 +3236,6 @@ msgstr ""
 
 msgid "The flow version this definition is in"
 msgstr "Версия потока, в которой находится это определение"
-
-msgid "Completed"
-msgstr "Завершено"
-
-msgid "Interrupted"
-msgstr "Прервано"
-
-msgid "Expired"
-msgstr "Истекло."
 
 msgid "Archive delete"
 msgstr "Удалить архив"
@@ -7160,6 +7151,15 @@ msgstr "Отправлено электронное письмо по адрес
 msgid "with subject"
 msgstr "с темой"
 
+msgid "Interrupted"
+msgstr "Прервано"
+
+msgid "Expired"
+msgstr "Истекло."
+
+msgid "Completed"
+msgstr "Завершено"
+
 msgid "Started"
 msgstr "Начато"
 
@@ -7674,6 +7674,9 @@ msgstr "День недели"
 
 msgid "Time of Day"
 msgstr "Время суток"
+
+msgid "Interrupted, Expired and Failed"
+msgstr ""
 
 #, fuzzy, python-format
 #| msgid ""
