--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-03-23 20:51+0000\n"
+"POT-Creation-Date: 2021-03-23 22:23+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Nyaruka <info@textit.in>, 2021\n"
 "Language-Team: Spanish (https://www.transifex.com/rapidpro/teams/226/es/)\n"
@@ -2350,7 +2350,9 @@ msgstr "Exportación completa, puede encontrarla aquí: %s (los usuarios de prod
 msgid "Send Message"
 msgstr "Enviar mensaje"
 
-msgid "Start Flow"
+#, fuzzy
+#| msgid "Start Flow"
+msgid "Start In Flow"
 msgstr "Empezar flujo"
 
 msgid "Edit Contact"
@@ -2661,6 +2663,9 @@ msgstr "Editar etiqueta"
 
 msgid "Delete Label"
 msgstr "Eliminar etiqueta"
+
+msgid "Start Flow"
+msgstr "Empezar flujo"
 
 msgid "Results"
 msgstr "Resultados"
